# Aspose.Email-FOSS-for-Cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  PUBLIC_API.md
cmake/: AsposeEmailFossConfig.cmake.in
examples/: CMakeLists.txt  README.md  create_msg_and_eml.cpp  msg_reader.cpp  msg_summary.cpp
include/aspose/email/foss/: version.hpp
include/aspose/email/foss/cfb/: cfb_constants.hpp  cfb_document.hpp  cfb_exception.hpp  cfb_node.hpp  cfb_reader.hpp  cfb_storage.hpp  cfb_stream.hpp  cfb_writer.hpp  directory_color_flag.hpp  directory_entry.hpp  directory_object_type.hpp  header.hpp  sector_marker.hpp
include/aspose/email/foss/msg/: common_message_property_id.hpp  mapi_attachment.hpp  mapi_message.hpp  mapi_property.hpp  mapi_property_collection.hpp  mapi_recipient.hpp  msg_constants.hpp  msg_document.hpp  msg_exception.hpp  msg_reader.hpp  msg_storage.hpp  msg_storage_role.hpp  msg_stream.hpp  msg_writer.hpp  property_type_code.hpp
src/: library.cpp
src/cfb/: cfb_document.cpp  cfb_node.cpp  cfb_reader.cpp  cfb_storage.cpp  cfb_stream.cpp  cfb_value_types.cpp  cfb_writer.cpp  detail.cpp  detail.hpp
src/msg/: mapi_attachment.cpp  mapi_message.cpp  mapi_property.cpp  mapi_property_collection.cpp  msg_document.cpp  msg_reader.cpp  msg_storage.cpp  msg_stream.cpp  msg_writer.cpp
src/msg/mime/: eml_message_mapper.cpp  eml_message_mapper.hpp  mime_model.cpp  mime_model.hpp  mime_reader.cpp  mime_reader.hpp  mime_writer.cpp  mime_writer.hpp  transfer_encoding.cpp  transfer_encoding.hpp
tests/: CMakeLists.txt  test_cfb.cpp  test_generated_headers.cpp  test_msg.cpp
